--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 			<nav class="container">
 				<img src="https://placeholdit.imgix.net/~text?txtsize=8&txt=150%C3%9730&w=150&h=30" alt="logo">
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Pages</a></li>
-					<li><a href="#">Feature</a></li>
-					<li><a href="#">Services</a></li>
+					<li><a href="#">Strona główna</a></li>
+					<li><a href="#">Strony</a></li>
+					<li><a href="#">O nas</a></li>
+					<li><a href="#">Usługi</a></li>
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">Link</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#">Kontakt</a></li>
 				</ul>
 			</nav>
 		</header>
